<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.project</groupId>
		<artifactId>bank-microservices</artifactId>
		<version>1.0-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>bank</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>bank</name>

	<properties>
		<java.version>17</java.version>
		<token-project.version>1.0-SNAPSHOT</token-project.version>
		<auth-project.version>0.0.1-SNAPSHOT</auth-project.version>
		<core-project.version>1.0-SNAPSHOT</core-project.version>
		<model-mapper.version>2.4.4</model-mapper.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>${model-mapper.version}</version>
		</dependency>

		<dependency>
			<groupId>com.project</groupId>
			<artifactId>core</artifactId>
			<version>${core-project.version}</version>
		</dependency>

		<dependency>
			<groupId>com.project</groupId>
			<artifactId>auth</artifactId>
			<version>${auth-project.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>